# Raylib-cs

.github/workflows/: native-aot.yml
Examples/: Examples.csproj  Program.cs
Examples/Textures/: TexturedCurve.cs
Raylib-cs/: Raylib-cs.csproj
Raylib-cs.Native/: CMakeLists.txt  Raylib-cs.Native.csproj  Raylib-cs.Native.props
Raylib-cs/interop/: Raylib.cs
